# chugl-webgpu

./: .gitignore  CMakeLists.txt  README.md
examples/: asset_loading.ck  b2.ck  bloom.ck  bugs.ck  ckfxr.ck  compute.ck  custom_geometry.ck  custom_material.ck  gameloop.ck  geo_and_mat.ck  gpoints.ck  gtext.ck  gwindow.ck  ik.ck  lighting.ck  lines2d.ck  mousepick.ck  obj-loader.ck  playground.ck  soundbulb.ck  textures.ck  ui.ck
src/: all.cpp  app.cpp  app.h  camera.cpp  chugl.cpp  component.cpp  component.h  compressed_fonts.h  entity.cpp  entity.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  implementations.cpp  main.cpp  r_component.cpp  r_component.h  sg_command.cpp  sg_command.h  sg_component.cpp  sg_component.h  shaders.h  sync.cpp  sync.h  ulib_assloader.cpp  ulib_box2d.cpp  ulib_box2d_oop.cpp  ulib_camera.cpp  ulib_component.cpp  ulib_geometry.cpp  ulib_helper.h  ulib_imgui.cpp  ulib_light.cpp  ulib_material.cpp  ulib_pass.cpp  ulib_scene.cpp  ulib_text.cpp  ulib_texture.cpp  ulib_window.cpp
src/chugl-tests/: T.ck  b2.ck  camera.ck  geometry.ck  ggen.ck  gmesh.ck  gpass.ck  gscene.ck  light.ck  material.ck  sampler.ck  text.ck  texture.ck  ui.ck
src/core/: file.h  macros.h  memory.cpp  memory.h  spinlock.h
src/tests/: gltf.cpp  imgui_test.cpp  obj.cpp  test_base.h  test_lines2d.cpp
